--- a/labs/intro_to_dl_transfer_learning/transfer_learning_tutorial.ipynb
+++ b/labs/intro_to_dl_transfer_learning/transfer_learning_tutorial.ipynb
@@ -2348,6 +2348,8 @@
         "# get predictions\n",
         "y_pred = []\n",
         "y_test = []\n",
+        "y_probs = []\n",
+        "true_labels = []\n",
         "\n",
         "# iterate over test data\n",
         "for inputs, labels in dataloaders['val']:\n",
@@ -2356,12 +2358,15 @@
         "  outputs = model(inputs)\n",
         "  _, preds = torch.max(outputs, 1)\n",
         "  y_pred.extend(preds.cpu().numpy())\n",
-        "  y_test.extend(labels.cpu().numpy())\n"
+        "  y_test.extend(labels.cpu().numpy())\n",
+        "  y_probs.extend(torch.nn.functional.softmax(outputs, dim=1).cpu().detach().numpy())\n",
+        "\n",
+        "  true_labels.extend(labels.cpu().numpy())\n"
       ],
       "metadata": {
         "id": "xtpzgWc4mGze"
       },
-      "execution_count": 62,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -2374,14 +2379,14 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "9ACWBtl3izQC",
-        "outputId": "361fb722-58fd-4c5c-c37f-10cc88981cae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 880
-        }
+        },
+        "id": "9ACWBtl3izQC",
+        "outputId": "15bcc50d-ec4f-489f-8118-d02955f25813"
       },
-      "execution_count": 67,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
@@ -2455,10 +2460,91 @@
     {
       "cell_type": "code",
       "source": [
-        "# take the highest of train_loss (or val_loss)"
+        "print(y_pred[:20])\n",
+        "print(true_labels[:20])"
       ],
       "metadata": {
-        "id": "t4Gh3RrhWlt-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "060ezNOjuYmg",
+        "outputId": "aca102e2-1eca-476d-83c6-f1d7e2834acf"
+      },
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find misclassified indices\n",
+        "misclassified_indices = np.where(y_pred != true_labels)[0]\n",
+        "\n",
+        "# Dictionary to store misclassifications per class\n",
+        "misclassified_by_class = {i: [] for i in range(9)}\n",
+        "\n",
+        "print(misclassified_indices)\n",
+        "print(misclassified_by_class)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "prZhodIqtMg2",
+        "outputId": "6df8d26a-d176-4b48-f1b9-33c70b7ae234"
+      },
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0]\n",
+            "{0: [], 1: [], 2: [], 3: [], 4: [], 5: [], 6: [], 7: [], 8: []}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-121-1efb0b78e2df>:2: DeprecationWarning: Calling nonzero on 0d arrays is deprecated, as it behaves surprisingly. Use `atleast_1d(cond).nonzero()` if the old behavior was intended. If the context of this warning is of the form `arr[nonzero(cond)]`, just use `arr[cond]`.\n",
+            "  misclassified_indices = np.where(y_pred != true_labels)[0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for idx in misclassified_indices:\n",
+        "    true_class = true_labels[idx]\n",
+        "    predicted_class = predicted_classes[idx]\n",
+        "    confidence = probs[idx, predicted_class]  # Confidence of the wrong prediction\n",
+        "    misclassified_by_class[true_class].append((idx, predicted_class, confidence))\n",
+        "\n",
+        "# Get top 10 errors for each class\n",
+        "top_10_errors = {}\n",
+        "for cls in range(9):\n",
+        "    errors = sorted(misclassified_by_class[cls], key=lambda x: x[2], reverse=True)  # Sort by confidence\n",
+        "    top_10_errors[cls] = errors[:10]  # Keep top 10\n",
+        "\n",
+        "# Print results\n",
+        "for cls, errors in top_10_errors.items():\n",
+        "    print(f\"Class {cls} - Top 10 Misclassified:\")\n",
+        "    for idx, pred, conf in errors:\n",
+        "        print(f\"  Image {idx} → Predicted {pred} with confidence {conf:.4f}\")\n",
+        "    print()\n"
+      ],
+      "metadata": {
+        "id": "oxiQehhUs5AM"
       },
       "execution_count": null,
       "outputs": []
